# products_record

./: .env  .gitignore  LICENSE  app.py  batch_download.py  clean_duplicates.py  config.py  download_service.py  export.py  gen_secret_key.py  get_data.py  key.txt  main.py  migra.py  models.py  pyproject.toml  rebuilt.py  start.bat  temp.html  temp1.html  utils.py  产品记录.lnk
csv_backup/: _details_backup.csv  details.csv  image_record.csv  main.csv
db_backups/: 302B5000  BD5A5000  data.db  users.xlsx
instance/: data.db
migrations/versions/: a1e817a8be41_add_users.py  d9983e819268_add_stock_column_to_details_table.py
templates/: add_company.html  add_salesperson.html  auto_number.html  base.html  details_form.html  details_list.html  edit_salesperson.html  export.html  list_companies.html  list_salespersons.html  login.html  main_form.html  main_list.html  search_results.html
templates/company/: list_companies.html
templates/products/: auto_number.html  details_form.html  details_list.html  main_form.html  main_list.html
templates/search/: search_results.html
templates/users/: add_permission.html  add_role.html  add_salesperson.html  add_user.html  admin_manage.html  edit_permission.html  edit_role.html  edit_salesperson.html  edit_user.html  list_salespersons.html
